# Project-City-Recognition

./: .gitignore  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  make.bat
docs/source/: conf.py  index.rst  modules.rst  src.application.rst  src.infrastructure.rst
models/: PCR_model.hdf5.REMOVED.git-id
src/application/: application.py  predict.py  train.py
src/config/: config.py  scrap_config_template.py
src/domain/: model.py
src/infrastructure/: data_generator.py  data_loading.py  data_scraping.py  model.py  remove_duplicates.py
