[tool.poetry]
name = "projectcityrecognition"
version = "0.1.0"
description = "Project 2 Yotta"
authors = ["Julien Sadoun, Olivier Collier and Cyril Lemaire"]

[tool.poetry.dependencies]
python = "~3.8"
pandas = "^1.2.3"
matplotlib = "^3.3.4"
scipy = "^1.6.1"
ipdb = "^0.13.7"
jupyterlab = "^3.0.12"
scikit-learn = "^0.24.1"
selenium = "^3.141.0"
Pillow = "^8.1.2"
tensorflow = "^2.4.1"
Keras = "^2.4.3"
streamlit = "^0.79.0"
opencv-python = "^4.5.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
